# ENGT-480---Senior-Capstone

./: 3.12.26 Lab Testing  GR04 TODO Notes.txt
!Project Files/Hardware/: TODO.txt  (+3 more)
!Project Files/Software/Wabash Interface/: .gitignore  README.md  WabashInterface.spec  pyproject.toml
!Project Files/Software/Wabash Interface/scripts/: build_exe.bat  build_exe.ps1  run_dev.bat  run_dev.ps1
!Project Files/Software/Wabash Interface/src/wabash_interface/: __init__.py  main.py
!Project Files/Software/Wabash Interface/src/wabash_interface.egg-info/: PKG-INFO
!Project Files/Software/Wabash Interface/src/wabash_interface/services/: __init__.py  serial_service.py
!Project Files/Software/Wabash Interface/src/wabash_interface/storage/: __init__.py  log_export.py
!Project Files/Software/Wabash Interface/src/wabash_interface/ui/: __init__.py  main_window.py
Course Work/: 2025_Rubric_Gates 1-6 (1).xlsx  Danison - CRG01.docx  Danison - CRG02.docx  Danison - Semester 2 CRG4.docx  Danison - Student NDA with IP Assignment to Sponsor Final 0925.docx  GanttChartForPCB.xlsx  desktop.ini
Project Notes/: Danison - Project Notes 01.pptx  Danison - Project Notes 02.pptx  Danison - Project Notes 03.pptx  Danison - Project Notes 04.pptx  Danison - Project Notes 05.pptx  Danison - Project Notes 06.pptx  Danison - Project Notes 07.pptx  Danison - Project Notes 08.pptx  Danison - Semester 2 Project Notes 02.pptx  Danison - Semester 2 Project Notes 03.pptx  Danison - Semester 2 Project Notes 04.pptx  Danison - Semester 2 Project Notes 07.pptx  Danison - Semester 2 Project Notes 08.pptx
(+50 files in other folders)
